--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   "devDependencies": {},
   "scripts": {
     "postinstall": "node_modules/.bin/tsc",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "node server.js"
   },
   "repository": {
     "type": "git",
